@@ -6,6 +6,7 @@ magnifying-glass-prototype.name=Magnifying Glass Prototype
 pattern.0value.1units={0}{1}
 pattern.0label.1value={0}: {1}
 pattern.showH2OMolecules=Show {0} Molecules
+pattern.0solution.1symbol={0} ({1})
     
 pH=pH
 solution=Solution
